--- a/index.html
+++ b/index.html
@@ -182,11 +182,8 @@
                     </p>
                 </div>
             </div>
-            <a href="./About" class="btn">Read More</a>
         </div>
     </div>
-    <!---------------Career----------------------->
-
     <!-------------Portfolio------------->
     <div class="proCont" id="projects">
         <h1 class="servHeader">Projects</h1>
@@ -211,7 +208,7 @@
             <div class="nothing"></div>
             <div class="nothing"></div>
 
-            <a href="" class="proContain">
+            <a href="https://github.com/martinea23/AR-Webapp" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>AR Web App</h1>
                     <img id="windT" src="images/projects/AR-Webapp.png" />
@@ -231,7 +228,7 @@
 
             <div class="nothing"></div>
             <div class="nothing"></div>
-            <a href="" class="proContain">
+            <a href="https://lcrsports.com/" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>RP Sports Site</h1>
                     <img id="wp" src="images/projects/WP-Site_lcrsports.png" />
@@ -263,7 +260,7 @@
                     </p>
                 </div>
             </a>
-            <a href="" class="proContain">
+            <a href="https://github.com/martinea23/spaceInvader" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>Space Invader</h1>
                     <img id="space" src="images/projects/spaceINvader.png" />
@@ -281,7 +278,7 @@
             <div class="nothing"></div>
             <div class="nothing"></div>
 
-            <a href="" class="proContain">
+            <a href="https://github.com/martinea23/SmartBall" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>IoT Ball</h1>
                     <img id="windT" src="images/projects/IotBall.png" />
@@ -314,7 +311,7 @@
                 </div>
             </a>
         </div>
-        <a href="/Projects" class="btn">Explore</a>
+        <a href="https://github.com/martinea23" class="btn">Explore</a>
     </div>
     <!-----------Services------------>
     <div class="services" id="services">
@@ -325,19 +322,30 @@
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Design</h2>
                     <p>Online Presence Through Websites!</p>
-                    <a href="#">Learn More</a>
                 </div>
                 <div class="serv hidden3">
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
                     <p>Mobile APP Development</p>
-                    <a href="#">Learn More</a>
                 </div>
                 <div class="serv hidden3">
                     <i class="fa-solid fa-video"></i>
-                    <h2>Video/Photo Editing</h2>
+                    <h2>Video Editing</h2>
                     <p>Get the Best From Your Content</p>
-                    <a href="#">Learn More</a>
+                </div>
+                <div class="serv hidden3">
+                    <i class="fa-solid fa-camera"></i>
+                    <h2>Photo Editing</h2>
+                    <p>Make Your Photos Stand Out</p>
+                </div>
+                <div class="serv hidden3">
+                    <i class="fa-solid fa-book-open-reader"></i>
+                    <h2>Tutoring</h2>
+                    <p>Improve Your Understanding of a Topic</p>
+                </div>
+                <div class="serv hidden3"><i class="fa-solid fa-pen-nib"></i>
+                    <h2>Logo Design</h2>
+                    <p>Bring Your Idea to life</p>
                 </div>
             </div>
         </div>
@@ -349,19 +357,36 @@
             <div class="msgHead">
                 <h1 class="sub-title">Message Me</h1>
             </div>
-            <form name="submit-to-google-sheet" class="msgformstuff">
-                <div class="sec">
-                    <p>Name:</p>
-                    <input type="text" name="Name" placeholder="Cristiano Ronaldo" required class="tbox">
-                    <p>Email:</p>
-                    <input type="email" name="Email" placeholder="myemail@gmail.com" required class="tbox">
+            <div class="divider">
+                <div class="msgImgCont">
+                    <img class="contImg" src="/images/message.png">
                 </div>
-                <div class="sec">
-                    <p>Message:</p>
-                    <textarea name="Message" rows="3" placeholder="Your Message" class="tArea" required></textarea>
-                </div>
-                <button type="submit" class="btn">Send</button>
-            </form>
+                <form name="submit-to-google-sheet" class="msgformstuff">
+                    <div class="sec">
+                        <div class="icon">
+                            <i class="fa-solid fa-user"></i>
+                        </div>
+                        <p></i>Name:</p>
+                        <input type="text" name="Name" placeholder="Cristiano Ronaldo" required class="tbox">
+                    </div>
+                    <div class="sec">
+                        <div class="icon">
+                            <i class="fa-solid fa-envelope"></i>
+                        </div>
+                        <p>Email:</p>
+                        <input type="email" name="Email" placeholder="myemail@gmail.com" required class="tbox">
+                    </div>
+                    <div class="sec">
+                        <div class="icon">
+                            <i class="fa-solid fa-message"></i>
+                        </div>
+                        <p>Message:</p>
+                        <textarea name="Message" rows="5" placeholder="Your Message" class="tArea" required></textarea>
+                    </div>
+                    <button type="submit" class="btn"><i class="fa-solid fa-paper-plane"></i> &nbsp Send</button>
+                </form>
+            </div>
+
             <span id="msg"></span>
         </div>
     </div>
