--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </nav>
     </div>
 
-    <div class="mobMenuCont">
+    <div class="mobMenuCont" id="mobileMenu">
         <ul>
             <li><a href="./" class="active">Home</a></li>
             <li><a href="#About">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#services">Career</a></li>
+            <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i class="fa-solid fa-download"></i>
