only issue left is 2 projects not showing

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="proCont" id="projects">
         <h1 class="servHeader">Projects</h1>
         <div class="projectContainer">
-            <a href="" class="proContain">
+            <a class="proContain">
                 <div class="item item1 hidden2">
                     <h1>Wind Turbine</h1>
                     <img id="windT" src="images/projects/windTurbine.png" />
